public/css/common2.css
/* ... */
.hpw .main-subtitle
{
    font-size: 15px;
    line-height: 1;
    color: #E8E6E6;
    text-shadow: 1px 1px 6px rgba(0,0,0,0.4);
    padding-top: 2%;
    font-family: 'Jura',sans-serif;
}

.hpw .m_top_10
{
    margin-top: 10px;
}

.hpw .filter-container{
    background: #ffffff;
    height: auto;
}

.hpw .filter-text-highlight
{
    height: 20%;
    background-color: rgb(228, 227, 226);
}

.hpw .p-bottom-3
{
    padding-bottom: 3px;
}

.hpw .p-bottom-3
{
    padding-bottom: 3px;
}

.hpw .advance-filter-content
{
    padding-top: 3px;
}

.hpw .filter-item-border
{
    padding: 10px;
}

.hpw .p-top-10
{
    padding-top: 10px;
}

.hpw .p-top-7
{
    padding-top: 7px;
}

.hpw .p-top-100
{
    padding-top: 100px;
}

.hpw .p-bottom-100
{
    padding-bottom: 100px !important;
}

.hpw .p-right-10
{
    padding-right: 10px;
}

.hpw .p-right-10-p

{
    padding-right: 10%;
}

.hpw .select-items
{
    padding: 5px;
    line-height: 10px;
}

.hpw .select-items:hover
{
    padding: 5px;
    background-color: rgb(221, 219, 239);
    line-height: 10px;
}

.hpw .border-style-right
{
    border-right: 1px solid rgb(213, 213, 213);
    border-right-style: dotted;
}

.hpw .border-style-bottom
{
    border-bottom: 3px solid rgb(49, 176, 213);
}

/* description page styles */
.hpw .description-page
{
    /*background-color: #6AC3AF;*/
    padding-top: 10px;
    position: relative;
    /*color: #fff;*/
}

.hpw .negetive-z-index
{
    z-index:-1000;
}

.hpw .footer-main-content
{
    font-weight: 700;
}

.hpw .p-top-30
{
    padding-top: 30px;
}

.hpw .p-top-40
{
    padding-top: 30px;
}

.hpw .font-16
{
    font-size: 16px;
}

.hpw .p-left-16
{
    padding-left: 16px;
}

.hpw .width-75
{
    width: 75% !important;
}

.hpw .width-50
{
    width: 50% !important;
}

.hpw .width-81
{
    width: 81% !important;
}

.hpw .text-desc
{
    color:#9494B3 !important;
}

.text-bolder
{
    font-weight: bolder !important;
}

.text-font-800
{
    font-weight: 800;
}

.hpw .description-content
{
    padding-top: 15px;
}

.hpw .text-orange
{
    color: orange;
}

.hpw .description-tab
{
    padding-top: 10px;
}

.hpw .description-tab:hover
{
    background-color: rgb(218, 232, 231);
}

.hpw .description-title
{
    color: rgb(5, 99, 145);
    font-weight: bolder;
}

/* footer page */
.hpw .footer-page
{
    background-color: rgba(0, 0, 0, 0.82);
    color: #ffffff;
    padding-top: 10px;
}

.hpw .no-padding
{
    padding:0px !important;
}

.hpw .border-bottom-gray
{
    border-bottom: 1px solid rgb(94, 93, 93);
}

.hpw .p-5
{
    padding: 5px;
}

/* css for line seperator */
/* Gradient transparent - color - transparent */

hr.style-one {
    border: 0;
    height: 1px;
    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(255, 255, 255, 0.75), rgba(0,0,0,0));
    background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
    background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
    background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
}
hr.style-two {
    border: 0;
    height: 1px;
    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(35, 17, 142, 0.75), rgba(0,0,0,0));
    background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
    background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
    background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
}

/* result page styles goes here */
.hpw .fixed-pos
{
    position: fixed;
}

.hpw .height-80
{
    height: 80%;
}

.hpw .height-100-px
{
    height:100px;
}

.rpw .header
{
    padding-bottom: 10px;
    background-color: #000000 !important;
}

.rpw .logo{
    height: auto;
    padding: 4px;
    width: auto;
}

.rpw .header-btn
{
    padding-top: 4px;
}

.hpw .text-white
{
    color: #fff;
    font-weight: 200;
}

.hpw .btn-text-white
{
    color: #fff !important;
}

.hpw .btn .btn-danger:hover
{
    background-color: #808080;
}

.hpw .p4
{
    padding: 4px;
}

.hpw .p8
{
    padding: 8px;
}

.hpw .border-right-1
{
    border-right: 1px solid #474747;
}

.hpw .m-bottom-0
{
    margin-bottom: 0px !important;
}

.hpw .no-border
{
    border:0px !important;
}

.hpw .p-left-35
{
    padding-left: 35%;
}

#result-page-menu-wrapper
{
    position: fixed;
    width: 100%;
    z-index:100;
}

.hpw .search-result
{
    height: 100%;
}

/* METRO UI {main search result styles goes here} */
.srw .metro-ui-wrapper
{
    position: relative;
    min-height: 700px;
    /*margin-top: -22px;*/

    /*background: -webkit-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /!* Chrome 10+, Saf5.1+ *!/*/
    /*background:    -moz-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /!* FF3.6+ *!/*/
    /*background:     -ms-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /!* IE10 *!/*/
    /*background:      -o-linear-gradient(90deg, #085078 10%, #85D8CE 90%); /!* Opera 11.10+ *!/*/
    /*background:         linear-gradient(90deg, #085078 10%, #85D8CE 90%); /!* W3C *!/*/

    background: -webkit-linear-gradient(90deg, #50C9C3 10%, #96DEDA 90%); /* Chrome 10+, Saf5.1+ */
    background:    -moz-linear-gradient(90deg, #50C9C3 10%, #96DEDA 90%); /* FF3.6+ */
    background:     -ms-linear-gradient(90deg, #50C9C3 10%, #96DEDA 90%); /* IE10 */
    background:      -o-linear-gradient(90deg, #50C9C3 10%, #96DEDA 90%); /* Opera 11.10+ */
    background:         linear-gradient(90deg, #50C9C3 10%, #96DEDA 90%); /* W3C */

}

.srw .main-tiles-frame
{
    padding-left: 5%;
    padding-right: 5%;
}
/* ... */

